# AEDA

./: .gitignore
Test 1/teste1718/: CMakeLists.txt  Car.cpp  Car.h  Garage.h  Test.cpp
Test 1/teste1819/Tests/: Account.cpp  Account.h  Bank.cpp  Bank.h  BankOfficer.cpp  BankOfficer.h
Test 2/16-17/: AfterSalesService.cpp  AfterSalesService.h  Article.cpp  Article.h  CMakeLists.txt  Purchase.cpp  Purchase.h  main.cpp
Test 2/17-18/: CMakeLists.txt  Doctor.cpp  Doctor.h  Hospital.cpp  Hospital.h  main.cpp
Test 2/18-19/Tests/: CSimpleList.h  CStack.h  Kart.cpp  Kart.h  tests.cpp
Test 3/1415/: main.cpp
Test 3/1415/Tests/: Supermercado.cpp
Test 3/1516/: main.cpp
Test 3/1516/Tests/: Dish.cpp  Dish.h  Restaurant.cpp  Restaurant.h  Table.cpp  Table.h
Test 3/1617/Tests/: Book.cpp  ReadingClub.cpp  ReadingClub.h
Test 3/1718/Tests/: Expertize.cpp  FEUPConsulting.cpp  FEUPConsulting.h  Student.cpp
Test 3/1819/Tests/: Client.cpp  PropertyTypeItem.cpp  REAgency.cpp  tests.cpp
aeda1920_fp01_sol/: CMakeLists.txt
aeda1920_fp01_sol/Tests/: parque.cpp  tests.cpp
aeda1920_fp02_sol/: CMakeLists.txt
aeda1920_fp02_sol/Tests/: frota.cpp  frota.h  tests.cpp  veiculo.cpp  veiculo.h
aeda1920_fp03_sol/: CMakeLists.txt
aeda1920_fp03_sol/Tests/: grafo.h  tests.cpp
aeda1920_fp03_sol/docs/: Doxyfile
aeda1920_fp04_sol/: CMakeLists.txt
aeda1920_fp04_sol/Tests/: parque.cpp  parque.h  tests.cpp
aeda1920_fp05_sol/: CMakeLists.txt
aeda1920_fp05_sol/Tests/: crianca.cpp  jogo.cpp  tests.cpp
aeda1920_fp06_sol/: CMakeLists.txt
aeda1920_fp06_sol/Tests/: balcao.cpp  balcao.h  stackExt.h
aeda1920_fp07_sol/: CMakeLists.txt
aeda1920_fp07_sol/Tests/: dicionario.cpp  dicionario.h  jogo.cpp  jogo.h  tests.cpp
aeda1920_fp09_sol/: CMakeLists.txt
aeda1920_fp09_sol/Tests/: aposta.cpp  aposta.h  jogador.cpp  jogador.h
aeda1920_fp10_sol/: CMakeLists.txt
aeda1920_fp10_sol/Tests/: caixa.cpp  maquinaEmpacotar.cpp
fp01/Tests/: parque.cpp  parque.h  tests.cpp
fp02/Tests/: frota.cpp  frota.h  veiculo.cpp
fp02_extra/Tests/: animal.cpp  zoo.cpp
fp03/Tests/: grafo.h
fp04/Tests/: parque.cpp  parque.h  sequentialSearch.h
fp05/Tests/: jogo.cpp  jogo.h
fp06/Tests/: balcao.cpp  balcao.h  stackExt.h  tests.cpp
fp09/: main.cpp
fp09/Tests/: aposta.cpp  jogador.cpp  jogador.h  tests.cpp
